syntax = "proto3";

package films;

service FilmsService {
  rpc FindAll (FilmListingQuery) returns (Films) {}
}

message PaginationMetadata {
  int32 page = 1;
  int32 size = 2;
  int32 totalRecords = 3;
  int32 totalPages = 4;
}

message Films {
  repeated Film items = 1;
  PaginationMetadata metadata = 2;
}

message FilmListingQuery {
  int32 page = 1;
  int32 size = 2;
  string search = 3;
}

message Film {
  int32 id = 1;
  string title = 2;
  string timeRange = 3;
  string thumbnail = 4;
  string premiereDate = 5;
  string slug = 6;
  repeated string showTypes = 7;
  repeated string timeSlots = 8;
}
